# pr-oxy

./: Cargo.toml  README.md  flake.nix  install.sh  proxy.toml
.github/workflows/: ci.yml  release.yml
deploy/: install.sh
src/: main.rs
